# Cmake-Exercise

./: README.md
Nestification/: CMakeLists.txt
Nestification/src/: CMakeLists.txt
Nestification/test/: CMakeLists.txt
exercise1/: CMakeLists.txt  add.cpp  head.h  sub.cpp
exercise2/: CMakeLists.txt
exercise2/src/: divide.cpp
exercise3/: CMakeLists.txt
exercise3/src/: main.cpp  mult.cpp
exercise4/: CMakeLists.txt
exercise5/: CMakeLists.txt  main.cpp
lib_use/dynamic/: CMakeLists.txt
lib_use/static/: CMakeLists.txt
